Safari365 Prod/src/objects/QuotationLineItem__c.object
<CustomObject>
    <fields>
        <fullName>AllServiceLineItemCount__c</fullName>
        <label>AllServiceLineItemCount</label>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_SLI_Cancelled__c</fullName>
        <formula>AND((AllServiceLineItemCount__c ==  Cancelled_Count__c),(QLI_with_SLI__c == TRUE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All SLI Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_SLI_Confirmed__c</fullName>
        <formula>AND((AllServiceLineItemCount__c ==  SLI_Confirmed__c),(QLI_with_SLI__c == TRUE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All SLI Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_SLI_Raised_Invoice__c</fullName>
        <formula>AND((AllServiceLineItemCount__c == ServiceLineItem_Count_For_Raised_Invoice__c),(QLI_with_SLI__c == TRUE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All SLI Raised Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_Count__c</fullName>
        <description>This roll up summary will be used in Quotation validation rule which states as follow

Quotation status cannot change to &quot;Cancelled&quot; unless all service line stages are equal to: No Booking Required, Cancelled, Not Booked.</description>
        <label>Cancelled Count</label>
        <summaryFilterItems>
            <field>ServiceLineItem__c.Service_Status__c</field>
            <operation>equals</operation>
            <value>Not Booked, Cancelled, No Booking Required</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirmed_Status__c</fullName>
        <label>Confirmed Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_serviceLineItems__c</fullName>
        <label>Confirmed ServiceLineItems</label>
        <summaryFilterItems>
            <field>ServiceLineItem__c.Service_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Count__c</fullName>
        <label>Display Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Format_Date__c</fullName>
        <label>Format Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_COS_in_USD__c</fullName>
        <label>Insurance COS in USD</label>
        <summarizedField>ServiceLineItem__c.Insurance_COS_in_USD__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Insurance_COS_in_ZAR__c</fullName>
        <label>Insurance COS in ZAR</label>
        <summarizedField>ServiceLineItem__c.Insurance_COS_in_ZAR__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Insurance_Sale_in_USD__c</fullName>
        <label>Insurance  Sale in USD</label>
        <summarizedField>ServiceLineItem__c.Insurance_Sale_in_USD__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Insurance_Sale_in_ZAR__c</fullName>
        <label>Insurance  Sale in ZAR</label>
        <summarizedField>ServiceLineItem__c.Insurance_Sale_in_ZAR__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_Item_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MarkupEur__c</fullName>
        <formula>(Sale_in_Eur__c - Nett_Cost_in_EUR__c )/Nett_Cost_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markup in Eur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarkupUSD__c</fullName>
        <formula>(Sale_in_USD__c - Nett_Cost_in_USD__c )/ Nett_Cost_in_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markup in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Markup_in_Zar__c</fullName>
        <formula>(Sale__c - Net_Cost__c)/Net_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markup in Zar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Cost__c</fullName>
        <label>Net Cost in Zar</label>
        <summarizedField>ServiceLineItem__c.Nett_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>ServiceLineItem__c.CurrencyIsoCode</field>
            <operation>equals</operation>
            <value>ZAR</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nett_Cost_in_EUR__c</fullName>
        <label>Nett Cost in EUR</label>
        <summarizedField>ServiceLineItem__c.Nett_Cost_in_EUR__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nett_Cost_in_USD__c</fullName>
        <label>Nett Cost in USD</label>
        <summarizedField>ServiceLineItem__c.Nett_Cost_in_USD__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Photobooks_COS_in_USD__c</fullName>
        <label>Photobooks COS in USD</label>
        <summarizedField>ServiceLineItem__c.Photobooks_COS_in_USD__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Photobooks_COS_in_ZAR__c</fullName>
        <label>Photobooks COS in ZAR</label>
        <summarizedField>ServiceLineItem__c.Photobooks_COS_in_ZAR__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Photobooks_Sale_in_USD__c</fullName>
        <label>Photobooks Sale in USD</label>
        <summarizedField>ServiceLineItem__c.Photobooks_Sale_in_USD__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Photobooks_Sale_in_ZAR__c</fullName>
        <label>Photobooks Sale in ZAR</label>
        <summarizedField>ServiceLineItem__c.Photobooks_Sale_in_ZAR__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QLI_with_SLI__c</fullName>
        <formula>AllServiceLineItemCount__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI with SLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <label>Quotation</label>
        <referenceTo>Quotations__c</referenceTo>
        <relationshipName>QuotationLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RaisedInvoice_ServiceLineItems_c__c</fullName>
        <label>Raised Invoice ServiceLineItems</label>
        <summaryFilterItems>
            <field>ServiceLineItem__c.Service_Status__c</field>
            <operation>equals</operation>
            <value>Request Provisional Booking, Provisionally Booked, Request Confirmation, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Raised_Invoice_Status__c</fullName>
        <label>Raised Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UnConfirmed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Services_Count__c</fullName>
        <label>Related Services Count</label>
        <summaryFilterItems>
            <field>ServiceLineItem__c.Service_Status__c</field>
            <operation>equals</operation>
            <value>Request Provisional Booking, Not Booked, Provisionally Booked, Request Confirmation, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLI_Confirmed__c</fullName>
        <description>This Roll up summary will be used for Quotation validation rule for following scenario.

 a User can not update to Confirmed unless all service lines are Stage:  Confirmed or No Booking Required.</description>
        <label>SLI Confirmed</label>
        <summaryFilterItems>
            <field>ServiceLineItem__c.Service_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, No Booking Required</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <label>Sale in Zar</label>
        <summarizedField>ServiceLineItem__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>ServiceLineItem__c.CurrencyIsoCode</field>
            <operation>contains</operation>
            <value>ZAR</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sale_in_Eur__c</fullName>
        <label>Sale in Eur</label>
        <summarizedField>ServiceLineItem__c.Sale_in_Eur__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sale_in_USD__c</fullName>
        <label>Sale in USD</label>
        <summarizedField>ServiceLineItem__c.Sale_in_USD__c</summarizedField>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ServiceLineItem_Count_For_Raised_Invoice__c</fullName>
        <description>This Roll up summary would be used in Quotation validation rule which states as follow

A user can only change to &quot;Raised Invoice&quot; If all service line items are at stages &quot;Provisionally Booked, Request Confirmation, Confirmed,  No Booking Required&quot; Example: if any service line item is = to Stage &quot;Not booked&quot; or  &quot;Request Provisional Booking&quot; a consultant should not be able to update the Quotation Object Stage.</description>
        <label>ServiceLineItem Count For Raised Invoice</label>
        <summaryFilterItems>
            <field>ServiceLineItem__c.Service_Status__c</field>
            <operation>equals</operation>
            <value>Provisionally Booked, Request Confirmation, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceLineItem__c.QuotationLine__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quotation Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quotation Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>